--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -10,4 +10,5 @@
 @import "modules/_page-section";
 @import "modules/_row";
 @import "modules/_section-title";
+@import "modules/_testimonials";
 @import "modules/_wrapper";
