--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -10,6 +10,7 @@
 @import "modules/_page-section";
 @import "modules/_row";
 @import "modules/_section-title";
+@import "modules/_site-footer";
 @import "modules/_sprite";
 @import "modules/_testimonials";
 @import "modules/_wrapper";
